fix alert block spacing

--- a/emf/static/emf/scss/whatson.scss
+++ b/emf/static/emf/scss/whatson.scss
@@ -148,6 +148,7 @@ header {
 
 .alert-block {
     padding: 1em;
+    margin: 1em 0;
 
     p:first-child {
         margin-top: 0;
